--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -28,6 +28,10 @@
         <servlet-name>WebappServlet</servlet-name>
         <url-pattern>/addBook</url-pattern>
     </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>WebappServlet</servlet-name>
+        <url-pattern>/login</url-pattern>
+    </servlet-mapping>
 
 
 
