--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -32,5 +32,9 @@
         <servlet-name>WebappServlet</servlet-name>
         <url-pattern>/login</url-pattern>
     </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>WebappServlet</servlet-name>
+        <url-pattern>/inspectUsers</url-pattern>
+    </servlet-mapping>
 
 </web-app>
