har mekket det heftigste skjemaet

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -36,9 +36,13 @@
         <servlet-name>WebappServlet</servlet-name>
         <url-pattern>/inspectUsers</url-pattern>
     </servlet-mapping>
-<servlet-mapping>
+    <servlet-mapping>
         <servlet-name>WebappServlet</servlet-name>
         <url-pattern>/deleteUser</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>WebappServlet</servlet-name>
+        <url-pattern>/checkUsername</url-pattern>
     </servlet-mapping>
 
 </web-app>
