Added single view for book

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -44,4 +44,8 @@
         <servlet-name>WebappServlet</servlet-name>
         <url-pattern>/deleteUser</url-pattern>
     </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>WebappServlet</servlet-name>
+        <url-pattern>/book</url-pattern>
+    </servlet-mapping>
 </web-app>
