knoter med login

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -47,6 +47,9 @@
     <servlet-mapping>
         <servlet-name>WebappServlet</servlet-name>
         <url-pattern>/checkUsername</url-pattern>
+    </servlet-mapping><servlet-mapping>
+        <servlet-name>WebappServlet</servlet-name>
+        <url-pattern>/checkLogin</url-pattern>
     </servlet-mapping>
 
 </web-app>
