Added wishlist, no adding or remove for now

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -52,4 +52,8 @@
         <servlet-name>WebappServlet</servlet-name>
         <url-pattern>/cart</url-pattern>
     </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>WebappServlet</servlet-name>
+        <url-pattern>/wishlist</url-pattern>
+    </servlet-mapping>
 </web-app>
