--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -64,4 +64,8 @@
         <servlet-name>WebappServlet</servlet-name>
         <url-pattern>/register</url-pattern>
     </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>WebappServlet</servlet-name>
+        <url-pattern>/checkLogin</url-pattern>
+    </servlet-mapping>
 </web-app>
