--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -5,25 +5,20 @@
          version="3.1">
 
     <display-name>assignment2</display-name>
+
     <welcome-file-list>
-        <welcome-file>index.html</welcome-file>
-        <welcome-file>index.htm</welcome-file>
-        <welcome-file>index.jsp</welcome-file>
-        <welcome-file>default.html</welcome-file>
-        <welcome-file>default.htm</welcome-file>
-        <welcome-file>default.jsp</welcome-file>
+        <welcome-file>index</welcome-file>
     </welcome-file-list>
 
     <servlet>
         <servlet-name>WebappServlet</servlet-name>
         <servlet-class>server.StaticServlet</servlet-class>
     </servlet>
-
+    
     <servlet-mapping>
         <servlet-name>WebappServlet</servlet-name>
-        <url-pattern>/UserRegistration</url-pattern>
+        <url-pattern>/index</url-pattern>
     </servlet-mapping>
-
     <servlet-mapping>
         <servlet-name>WebappServlet</servlet-name>
         <url-pattern>/addBook</url-pattern>
