--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -63,4 +63,8 @@
         <servlet-name>WebappServlet</servlet-name>
         <url-pattern>/checkLogin</url-pattern>
     </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>WebappServlet</servlet-name>
+        <url-pattern>/logout</url-pattern>
+    </servlet-mapping>
 </web-app>
