--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -74,4 +74,12 @@
         <servlet-name>WebappServlet</servlet-name>
         <url-pattern>/confirmation</url-pattern>
     </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>WebappServlet</servlet-name>
+        <url-pattern>/admin</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>WebappServlet</servlet-name>
+        <url-pattern>/adminpage</url-pattern>
+    </servlet-mapping>
 </web-app>
