Added functionality for admin to see the wish history if users

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -90,4 +90,8 @@
         <servlet-name>WebappServlet</servlet-name>
         <url-pattern>/adminpage</url-pattern>
     </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>WebappServlet</servlet-name>
+        <url-pattern>/userwishes</url-pattern>
+    </servlet-mapping>
 </web-app>
