nå kjører det, og det lages tabell

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -19,6 +19,14 @@
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>WebappServlet</servlet-name>
+        <url-pattern>/addReview</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>WebappServlet</servlet-name>
+        <url-pattern>/extractReview</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>WebappServlet</servlet-name>
         <url-pattern>/index</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
